# devoir4_Dionne_Leblanc

./: README.md  data_monte_carlo_ising.csv  data_monte_carlo_ising_exemple_rapport.csv  data_monte_carlo_ising_test.csv  exemple_data_MC_Ising.csv  exemple_data_MC_ising.csv  graphiques.mplstyle  ising.py  pyproject.toml  rapport.ipynb
