[tool.poetry]
name = "dev4-phq404-td-jl"
version = "0.1.0"
description = ""
authors = ["Theo Dionne, Jerome Leblanc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.21.1"
numba = "^0.56.4"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
